fixed bug where the wrong color was shown

--- a/src/less/components/button.less
+++ b/src/less/components/button.less
@@ -208,7 +208,7 @@ button.button {
     &:hover,
     &:focus {
         color: @color-secondary;
-        border-color: tint(@color-secondary, 20%);
+        border-color: @color-secondary;
     }
 
     &.___colored {
@@ -355,7 +355,7 @@ button.button {
     }
 
     &.___is-open {
-        border-color: tint(@color-secondary, 20%);
+        border-color: @color-secondary;
     }
 }
 
